tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(32,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (31:18). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(44,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (43:18). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(53,23): error FS0001: This expression was expected to have type
    Tree    
but here has type
    int    

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(53,27): error FS0001: This expression was expected to have type
    int    
but here has type
    Tree    

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(53,136): error FS0001: This expression was expected to have type
    Tree    
but here has type
    int    

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(53,140): error FS0001: This expression was expected to have type
    int    
but here has type
    Tree    

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(53,152): error FS0001: This expression was expected to have type
    Tree    
but here has type
    int    

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(53,156): error FS0001: This expression was expected to have type
    int    
but here has type
    Tree    

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(61,23): error FS0001: This expression was expected to have type
    Tree    
but here has type
    int    

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(61,27): error FS0001: This expression was expected to have type
    int    
but here has type
    Tree    

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(61,136): error FS0001: This expression was expected to have type
    Tree    
but here has type
    int    

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(61,140): error FS0001: This expression was expected to have type
    int    
but here has type
    Tree    

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(61,152): error FS0001: This expression was expected to have type
    Tree    
but here has type
    int    

/workspace/mochi/tests/algorithms/transpiler/FS/data_structures/binary_tree/binary_tree_path_sum.fs(61,156): error FS0001: This expression was expected to have type
    int    
but here has type
    Tree    
